Fix: region modal layout issue

--- a/src/assets/styles/cmps/_SearchModal.scss
+++ b/src/assets/styles/cmps/_SearchModal.scss
@@ -11,6 +11,7 @@
   height: 466px;
   width: 498px;
   justify-content: center;
+  top: 0;
 
   .region-title {
     line-height: 1.125rem;
